--- a/platform/security/pdp/security-pdp-authzrealm/pom.xml
+++ b/platform/security/pdp/security-pdp-authzrealm/pom.xml
@@ -34,9 +34,9 @@
             <artifactId>cxf-rt-ws-security</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.balana</groupId>
-            <artifactId>org.wso2.balana</artifactId>
-            <version>1.0.2</version>
+            <groupId>com.connexta.arbitro</groupId>
+            <artifactId>arbitro-core</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -84,6 +84,12 @@
             <artifactId>platform-util</artifactId>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -111,7 +117,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
-                            org.wso2.balana,
+                            arbitro-core,
                             commons-io
                             httpclient,
                             httpcore,
