--- a/catalog/spatial/csw/spatial-csw-schema-bindings/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-schema-bindings/pom.xml
@@ -97,12 +97,14 @@
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
                 <artifactId>maven-jaxb2-plugin</artifactId>
+                <version>0.13.0</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
+                            <catalog>src/main/resources/catalog.xml</catalog>
                             <schemaIncludes>
                                 <value>csw/*/CSW-publication.xsd</value>
                                 <value>gml/*/base/gml.xsd</value>
