--- a/catalog/spatial/registry/registry-schema-bindings/pom.xml
+++ b/catalog/spatial/registry/registry-schema-bindings/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.codice.thirdparty</groupId>
             <artifactId>ogc-filter-v_1_1_0-schema</artifactId>
-            <version>1.1.0_2</version>
+            <version>1.1.0_3</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -110,6 +110,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
+                            <catalog>src/main/resources/catalog.xml</catalog>
                             <schemaIncludes>
                                 <value>csw-ebrim/*/csw-ebrim.xsd</value>
                                 <value>gml/*/base/gml.xsd</value>
